bridge/base/0-sarge-namespace.yaml
#! 0-sarge-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: sarge
    labels:
        com.docker.compose.project: sarge
