bridge/base/sarge-app-deployment.yaml
#! sarge-app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sarge-app
    namespace: sarge
    labels:
        com.docker.compose.project: sarge
        com.docker.compose.service: sarge-app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: sarge
            com.docker.compose.service: sarge-app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: sarge
                com.docker.compose.service: sarge-app
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: sarge
                  image: sarge-sarge-app
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: sarge-app-3000
                      containerPort: 3000
                  volumeMounts:
                    - name: app
                      mountPath: /app
            volumes:
                - name: app
                  hostPath:
                    path: W:\Projects\Sarge
