bridge/base/sarge-app-expose.yaml
#! sarge-app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: sarge-app
    namespace: sarge
    labels:
        com.docker.compose.project: sarge
        com.docker.compose.service: sarge-app
spec:
    selector:
        com.docker.compose.project: sarge
        com.docker.compose.service: sarge-app
    ports:
        - name: sarge-app-3000
          port: 3000
          targetPort: sarge-app-3000
